# PQC-XApps

./: .gitignore  LICENSE  README.md
PQC-Chat/: .gitignore  CMakeLists.txt  PQC-Chat.cpp  PQC-Chat.h  PQC-Chat.sln  PQC-Chat.vcxproj
PQC-Chat/App/netinfo-test/: CmakeLists.txt
PQC-Chat/App/pcapdevice-test/: CmakeLists.txt
PQC-Chat/App/pqcclient-test/: CmakeLists.txt
PQC-Chat/App/pqcserver-test/: CmakeLists.txt  pqcserver-test.cpp
PQC-Chat/App/rawsocket-test/: CmakeLists.txt
PQC-Chat/App/wxChat/: CmakeLists.txt
PQC-Chat/Src/: pcapdevice.h
PQC-VPN/: CMakeLists.txt  PQC-VPN.cpp  PQC-VPN.h
